criei arquivo HTML, coloquei favicon e adicionei um título, um H1 e um Paragrafo

--- a/Introduçao ao Git e GitHub/assets/index.html
+++ b/Introduçao ao Git e GitHub/assets/index.html
@@ -8,6 +8,7 @@
     <title>.:Desafio Git/GitHub:.</title>
 </head>
 <body>
-    
+    <h1>Olá! Meu Nome é Salatiel</h1>
+    <p>Podem me chamar de Theo / (TheoKrdozo)</p>
 </body>
 </html>
