Voltando para main e Finalizando o Projeto

--- a/Introduçao ao Git e GitHub/assets/index.html
+++ b/Introduçao ao Git e GitHub/assets/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Olá! Meu Nome é Salatiel</h1>
     <p>Podem me chamar de Theo / (TheoKrdozo)</p>
+    <h3>Finalizando o Projeto</h3>
 </body>
 </html>
